# lib/api-spec/openapi.yaml
@@ -848,6 +848,9 @@ components:
         scoutingProfile:
           type: string
           nullable: true
+        photoUrl:
+          type: string
+          nullable: true
         createdAt:
           type: string
           format: date-time
@@ -887,6 +890,11 @@ components:
         scoutingProfile:
           type: string
           nullable: true
+        photoUrl:
+          type: string
+          nullable: true
+        isMuppet:
+          type: boolean
         createdAt:
           type: string
           format: date-time
@@ -927,6 +935,7 @@ components:
         - recentForm
         - comments
         - awardHistory
+        - isMuppet
 
     PlayerStat:
       type: object
@@ -1284,6 +1293,9 @@ components:
         scoutingProfile:
           type: string
           nullable: true
+        photoUrl:
+          type: string
+          nullable: true
         apps:
           type: integer
         goals:
@@ -1312,6 +1324,8 @@ components:
           description: Total value change from the most recent appearance
         isKing:
           type: boolean
+        isMuppet:
+          type: boolean
       required:
         - playerId
         - playerName
@@ -1324,6 +1338,7 @@ components:
         - marketValue
         - recentForm
         - isKing
+        - isMuppet
 
     FixturePlayerEntry:
       type: object
